Note, the changes for the last STABLE release start with release
2.4.19.

-------------------------------------------------------------------

Changes in beta release 2.5.19 (not released yet)

* New features:

* Bug Fixes:

-------------------------------------------------------------------

Changes in beta release 2.5.18 (11-Sep-2006)

* Bug Fixes:

   - If a window started fullscreen, leaving fullscreen state now
     properly unmaximizes and resizes the window.
   - Fixed the ForeColor/HilightFore styles that were broken in
     2.5.17.
   - FvwmPager can now move icons with the !IconTitle style.
   - Fixed drawing of icons that are moved to a different desk.
   - FvwmPager no longer tries to move non-movable windows.
   - FvwmPager now moves all windows as user requests.
   - FvwmPager no longer displaces windows with title and border
     sizes on moves.
   - TestRc now correctly matches Break, and $[cond.rc] is
     expanded for Break.
   - Fixed several 64-bit architecture problems with
     XGetWindowProperty().  Xine works much better on 64-bit
     machines.
   - Fixed handling of ClickToFocusPassesClick with the EWMH
     desktop (e.g. using nautilus).
   - Fixed handling of windows that are unmapped and mapped again
     too fast (e.g. fpga_editor).

-------------------------------------------------------------------

Changes in beta release 2.5.17 (19-Jul-2006)

* New features:

   - New MenuStyle options TitleFont, TitleColorset and
     HilightTitleBack.
   - New command PressButton in module FvwmButtons for being able
     to emulate button press via other means than the mouse.
   - New wrap options to EdgeScroll command for wrapping with pixel
     distances.
   - New Style option UnderMousePlacement.
   - Unused arguments to Style options generate warnings.
   - The name style names match against can be augmented by the
     X-resource "fvwmstyle".
   - New options, Reverse and UseStack, to All command.